# eng_thesis_stm32

./: .clangd  .cproject  .gitignore  .mxproject  .project  praca_inzynierska_v2 Debug.launch  praca_inzynierska_v2.ioc
Core/Inc/: adc.h  communication.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Inc/control/: bang_bang.h  coil_controller.h  combined_controller.h  control_reference.h  controller_enums.h  fan_controller.h  pid.h
Core/Inc/measurements/: speed.h  temperature.h
Core/Inc/utils/: char_translator.h  iir_filter.h
Core/Src/: adc.c  communication.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c  tim.c
Core/Src/control/: bang_bang.c  coil_controller.c  combined_controller.c  control_reference.c  fan_controller.c  pid.c
Core/Src/measurements/: speed.c  temperature.c
Core/Src/utils/: char_translator.c  iir_filter.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Tests/: coil_controller_test.cpp  pid_test.cpp  sanity_test.cpp  test.cpp
Tests/cmake/: CMakeLists.txt  CMakePresets.json
Tests/mocks/: stm32f4xx_hal.c  stm32f4xx_hal.h
USB_DEVICE/App/: usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
